<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.graphics.Color"></import>

        <variable
            name="viewModel"
            type="com.example.fingerpainter.viewModels.ColourViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.ColourActivity">

        <TextView
            android:id="@+id/colourTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@{viewModel.colour}"
            android:gravity="center"
            android:text="@string/colour"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/blackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/redButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:onClick="@{()->viewModel.setColourRed()}"
            android:text="@string/red"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/greenButton"
            app:layout_constraintStart_toStartOf="@+id/blackButton"
            app:layout_constraintTop_toBottomOf="@+id/blackButton" />

        <Button
            android:id="@+id/yellowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFEB3B"
            android:onClick="@{()->viewModel.setColourYellow()}"
            android:text="@string/yellow"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/colourOKButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blueButton" />

        <Button
            android:id="@+id/blackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:onClick="@{()->viewModel.setColourBlack()}"
            android:text="@string/black"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/redButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colourTextView" />

        <Button
            android:id="@+id/greenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#19FF01"
            android:onClick="@{()->viewModel.setColourGreen()}"
            android:text="@string/green"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/blueButton"
            app:layout_constraintStart_toStartOf="@+id/redButton"
            app:layout_constraintTop_toBottomOf="@+id/redButton" />

        <Button
            android:id="@+id/blueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0000FF"
            android:onClick="@{()->viewModel.setColourBlue()}"
            android:text="@string/blue"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/yellowButton"
            app:layout_constraintStart_toStartOf="@+id/yellowButton"
            app:layout_constraintTop_toBottomOf="@+id/greenButton" />

        <Button
            android:id="@+id/colourOKButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:onClick="onOKButtonClick"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yellowButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>